made changes to some test cases